# e164normalise

./: CMakeLists.txt  README.md  normalise.cpp  normalise_unittest.cpp  utils.cpp  utils.h
